--- a/final_project_folder/html/1st.html
+++ b/final_project_folder/html/1st.html
@@ -77,22 +77,22 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-circle" src="{{ url_for('static', filename= 'Images/Charles.jpg') }}">
+                    <img class="img-circle" src="C:\Users\jesto\Desktop\D3Project\final_project_folder\html\static\images/Charles.jpg">
                         <div class="card-body text-center">
                             <h2 class="card-title">Charles Campisi</h2>
-                            <h4 class="eboard-title">???????</h5>
+                            <h4 class="eboard-title">Associate Professor</h5>
                         </div>
                     
                 </div>
                 <div class="col-md-4">
-                    <img class="img-circle" src="{{ url_for('static', filename= 'Images/Joan.jpg') }}">
+                    <img class="img-circle" src="C:\Users\jesto\Desktop\D3Project\final_project_folder\html\static\images/Joan.jpg">
                         <div class="card-body text-center">
-                            <h2 class="card-titlex">Joan Stone-Mays</h2>
+                            <h2 class="card-title">Joan Stone-Mays</h2>
                             <h4 class="eboard-title">Administrative Assistant</h5>
                         </div>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-circle" src="{{ url_for('static', filename= 'Images/Nick.png') }}">
+                    <img class="img-circle" src="C:\Users\jesto\Desktop\D3Project\final_project_folder\html\static\images/Nick.png">
                         <div class="card-body text-center">
                             <h2 class="card-title">Nick Weaver</h2>
                             <h4 class="eboard-title">???????</h5>
@@ -123,3 +123,65 @@
             <div>
                 <h3><b>Hypothesis:</b> </h3> <h4><b>This is a comparison between meat-based and plant-based foods on nutritional value and resource usage.</b></h4>
             </div>
+            <div>
+                <h3><b>Process:</b></h3> 
+                <h5>a.
+                <br></h5>
+            </div>
+
+  <!-- End #experience -->
+
+  <div id="skills">
+
+    <h1><font color="green">Tools</font></h1>
+    <ul>
+         <li>JavaScript</li>
+         <li>MongoDB</li>
+         <li>SQL</li>
+         <li>Python</li>
+         <li>HTML</li>
+         <li>CSS</li>
+         <li>Jupyter</li>
+         <li>Flask</li>
+         <li>Plotly</li>
+     </ul>
+     
+ </div>
+ <!-- 
+        <form class="form-inline"> -->
+          <div class="form-group">
+
+          </div>
+   
+          <div class="row">
+              <h2 class="heading"><b><br><br>Visualizations</b></h2>
+          </div>
+  
+          <div id="2ndGraph"></div>
+          <div id="app2"></div>
+          <div id=""></div>
+          <div id=""></div>
+  
+          <canvas id="bar-chart-grouped" width="600" height="200"></canvas>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+          <script src="{{ url_for('static', filename='2ndGraph.js') }}"></script>
+          <script src="{{ url_for('static', filename='app2.js') }}"></script>
+          <script src="{{ url_for('static', filename='') }}"></script>
+          <script src="{{ url_for('static', filename='') }}"></script>
+      <!-- </form>  -->
+      </div>
+  	<head>
+            <meta charset="utf-8">
+            <title>environment data</title>
+            <link rel="stylesheet" type="text/css" href="d3style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
+        </head>
+        <body>
+            <div class="chart">
+            </div>
+            <script type="text/javascript" src="app2.js"></script>
+      </body>
+    </html>
+      <footer>
+          <div class="container">
