final_html_changes

--- a/final_project_folder/html_rm/resources.html
+++ b/final_project_folder/html_rm/resources.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us</title>
+    <title>Data Resources</title>
 <!-- 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
 <!-- 	<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
