--- a/final_project_folder/html_rm/2ndgraph.html
+++ b/final_project_folder/html_rm/2ndgraph.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Test</title>
+  <title>Food Nutrition data</title>
   <link rel="stylesheet" type="text/css" href="static/css/style1.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -16,6 +16,13 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+  </nav>
+
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
@@ -42,3 +49,4 @@
   <script type="text/javascript" src="static/js/2ndGraph.js"></script>
 
 </body>
+</html>
