--- a/final_project_folder/html_rm/envidata.html
+++ b/final_project_folder/html_rm/envidata.html
@@ -2,23 +2,16 @@
 <html class="no-js" lang="en">
 <meta charset="utf-8">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Us</title>
-<!-- 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-<!-- 	<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <!--link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet"-->
-    <!--link rel="stylesheet" href="{{ url_for('static', filename= 'libs/font-awesome/css/font-awesome.min.css') }}"-->
-    <!--link href="{{ url_for('static', filename= 'css/bootstrap.min.css') }}" rel="stylesheet"-->
-    <!--link href="{{ url_for('static', filename= 'css/styles.css') }}" rel="stylesheet"-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <title>Environment Data</title>
+    <link rel="stylesheet" type="text/css" href="static/css/d3style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
 
 </head>
 
@@ -30,14 +23,33 @@
             </button>
     </nav>
 		
-		<title>environment data</title>
-		<link rel="stylesheet" type="text/css" href="static/css/d3style.css">
+    <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-12">
+                <h1>Impact of food products on Environment</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12  col-md-9">
+                <div class="chart">
+            </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-	</head>
-	<body>
-		<div class="chart">
-		</div>
-		<script type="text/javascript" src="static/js/app2.js"></script>
+    <script type="text/javascript" src="static/js/app2.js"></script>
+    
+    <div class="row">
+        <div class="col-xs-12 col-md-12">
+          <h3>Observations:</h3>
+          <ul>
+            <li>Top three food products with highest nutritional units were Coffee, Dark Chocolate and Wine.</li>
+            <li>Top three food products with highest land requirement were Bovine meat, Lamb and Mutton and Olive Oil.</li>
+            <li>Top three food products with highest green house gas emissions (CO2) were Bovine meat, Lamb and Mutton.</li>
+            <li>Top three food products with highest acidification gas emissions (SO2) were Bovine meat and Cheese.</li>
+            <li>Top three food products with highest eutrophication gas emissions (PO4) were Bovine meat, Farmed Fish and Farmed Crustaceans.</li>
+            <li>Top three food products with highest fresh water requirements were Bovine meat, Nuts, Pig meat.</li>
+          </ul>
+
+        </div>
+      </div>
   </body>
 </html>
