--- a/final_project_folder/html_rm/about.html
+++ b/final_project_folder/html_rm/about.html
@@ -24,11 +24,35 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <a class="navbar-brand" href="index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                
+                <li class="nav-item">
+                        <a class="nav-link" href="resources.html">Data Resources </a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Analysis Graphs
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="envidata.html">Impact on environment</a>
+                        <a class="dropdown-item" href="2ndgraph.html">Nutritional value</a>
+                        <!--a class="dropdown-item" href="cost.html">Price variation</a-->
+                    </div>
+                </li>
+
+            </ul>
+        </div>
     </nav>
+
     <!-- About Us Section-->
 <div class="container bg-light">       
     <div class="row">
@@ -86,7 +110,12 @@
         </div>    
     </div>
 </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
 
