--- a/final_project_folder/html_rm/envidata.html
+++ b/final_project_folder/html_rm/envidata.html
@@ -16,12 +16,37 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+            </li>
+            
+            <li class="nav-item">
+                    <a class="nav-link" href="resources.html">Data Resources </a>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Analysis Graphs
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="envidata.html">Impact on environment</a>
+                    <a class="dropdown-item" href="2ndgraph.html">Nutritional value</a>
+                    <!--a class="dropdown-item" href="cost.html">Price variation</a-->
+                </div>
+            </li>
+
+        </ul>
+
+    </div>
+</nav>
+
 		
     <div class="container">
             <div class="row">
@@ -51,5 +76,11 @@
 
         </div>
       </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
   </body>
 </html>
