--- a/final_project_folder/html_rm/2ndgraph.html
+++ b/final_project_folder/html_rm/2ndgraph.html
@@ -55,7 +55,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <text>Vegetarian and vegan options are often a healthier choice when compared to meat and dairy products. We compiled a variety of different foods along with their vegetarian and vegan substitutes for you to compare their nutritional information. Please hover over a circle to see the nutrition information of that item and click on it to see the different substitutes it has.</text>
+        <text>Vegetarian and vegan options are often a healthier choice when compared to meat and dairy products. We compiled a variety of different foods along with their vegetarian and vegan substitutes for you to compare their nutritional information. Please hover over a circle to see the nutrition information of that item and click on it to see the different substitutes it has. Every items circle size is based on its caloric content and all nutrient values are in grams per 100 grams of the food.</text>
       </div>
     </div>
     <div class="row">
