--- a/final_project_folder/html_rm/index.html
+++ b/final_project_folder/html_rm/index.html
@@ -23,6 +23,7 @@
 
 </head>
 
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="index.html">Home</a>
@@ -87,7 +88,7 @@
         </div>
 
     <div>
-        <h3><b>Goal of the study</b> </h3> <h4><b>Understand and comparing the impact of vegan/vegetarian and meat-products on the environment and human health</b></h4>
+        <h3><b>Goal of the study</b> </h3> <h4>Understand and comparing the impact of vegan/vegetarian and meat-products on the environment and human health</b></h4>
     </div>
 </div>
 </body>
